--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,5 +42,6 @@
   },
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0"
-  }
+  },
+  "homepage": "https://seog-jun.github.io/react-for-beginners"
 }
