--- a/package.json
+++ b/package.json
@@ -43,4 +43,5 @@
   "devDependencies": {
     "eslint-plugin-react-hooks": "^4.6.0"
   }
+  "homepage": "https://seog-jun.github.io/react-for-beginners/"
 }
